--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1 class="logo">Portofolio</h1>
-        <nav>
-            <button onclick="showSection" id="btn-home">Home</button>
-            <button onclick="showSection" id="btn-about">About</button>
-            <button onclick="showSection" id="btn-project">Project</button>
-            <button onclick="showSection" id="btn-contact">Contact</button>
-            <button onclick="changeTheme">Dark Mode</button>
-        </nav>
-    </header>
+    <div class="navbar">
 
-    <section id="home" class="section active">
+        <h2 class="logo">Portofolio</h2>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+        <button onClick="changeTheme" id="theme">Light</button>
+    </div>
+
+    <section id="home" class="section">
         <div class="card">
             <div class="hm-text">
-                <a href="#about"><img src="avatar.jpeg" alt="avatar" style="width: 100%;" title="clic for more" >
-                    <h2>M.ramadanu</h2>
-                    <h4>Full Stack Development</h4>
-                </a>
+                <a href="#about"><img src="avatar.jpeg" alt="avatar" style="width: 100%;" title="clic for more" ></a>
+                <h2>M.ramadanu</h2>
+                <h4>Full Stack Development</h4>
             </div>
         </div>
     </section>
@@ -59,26 +59,15 @@
         </div>
     </section>
 
-    <section id="contact" class="contact">
-        <h1>Contact Me</h1>
-        <form>
-            <table>
-                <tr>
-                <td>Name</td>
-                <td><input type="text" name="nama" required></td>
-                </tr>
-                <tr>
-                <td>Email</td>
-                <td><input type="email" name="email" required></td>
-                </tr>
-                <tr>
-                <td>Message</td>
-                <td><textarea name="text" rows="3"></textarea></td>
-                </tr>
-            </table>
-            <button type="submit">Kirim</button>
+    <section id="contact" class="section">
+        <h2>Contact Me</h2>
+        <form class="contact-form">
+            <input type="text" name="name" id="name" placeholder="Your Name" required>
+            <input type="email" name="email" id="email" placeholder="Your Email" required>
+            <textarea name="message" id="message" placeholder="Message" rows="4" required></textarea>
+            <button type="submit" onclick="submitForm()">Kirim</button>
         </form>
-
+        <p id="form-message"></p>
     </section>
 
 
