--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             <a href="#project">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
-        <button onclick="toggleTheme()" id="theme">Cange Theme</button>
+        <button id="theme">Light Mode</button>
     </div>
 
     <section id="home" class="section">
         <div class="card">
             <div class="hm-text">
-                <a href="#about"><img src="avatar.jpeg" alt="avatar" style="width: 100%;" title="clic for more" ></a>
+                <a href="asset/a.pdf" download=""><img src="/asset/avatar.jpeg" alt="avatar" style="width: 100%;" title="clic for Resume" ></a>
                 <h2>M.ramadanu</h2>
                 <h4>Full Stack Development</h4>
-            </div>
+            </div>       
         </div>
     </section>
 
@@ -39,32 +39,45 @@
     </section>
 
     <section id="project" class="section">
+        <h1>Daftar Project</h1>
         <div class="project">
-            <h1>Daftar Project</h1>
             <div class="project-head">
                 <div class="project-card">
-                    <h3>Web Portofolio</h3>
-                    <button onclick="toggleDetail(event)">More Info</button>
+                    <div>
+                      <h2>Portofolio</h2>
+                      <p>HTML,CSS dan JAVASCRIPT</p>
+                    </div>
+                    <button class="btn" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="des-project">Membuat Website Portofolio yang dinamis dan interaktif dengan desain yang nyaman di lihat</p>
+                <p class="detail-project">Membuat Website Portofolio yang dinamis dan interaktif dengan desain yang nyaman di lihat</p>
             </div>
+        </div>
+        <div class="project">
             <div class="project-head">
                 <div class="project-card">
-                    <h3>Web Portofolio</h3>
-                    <button onclick="toggleDetail(event)">More Info</button>
+                    <div>
+                      <h2>Portofolio</h2>
+                      <p>HTML,CSS dan JAVASCRIPT</p>
+                    </div>
+                    <button class="btn" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="des-project">deskripsi</p>
+                <p class="detail-project">Membuat Website Portofolio yang dinamis dan interaktif dengan desain yang nyaman di lihat</p>
             </div>
+        </div>
+        <div class="project">
             <div class="project-head">
-
                 <div class="project-card">
-                    <h3>Web Portofolio</h3>
-                    <button onclick="toggleDetail(event)">More Info</button>
+                    <div>
+                      <h2>Portofolio</h2>
+                      <p>HTML,CSS dan JAVASCRIPT</p>
+                    </div>
+                    <button class="btn" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="des-project">deskripsi</p>
+                <p class="detail-project">Membuat Website Portofolio yang dinamis dan interaktif dengan desain yang nyaman di lihat</p>
             </div>
         </div>
     </section>
+
 
     <section id="contact" class="section">
         <h2>Contact Me</h2>
@@ -83,3 +96,41 @@
 <footer>&copy; 2025 M.ramadanu | All rights reserved</footer>
 
 </html>
+
+
+<!-- <section id="about" class="about container">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur obcaecati recusandae necessitatibus sequi beatae culpa, iste nobis vitae quos. Odio reprehenderit, in praesentium accusamus voluptates ipsam? Quibusdam velit assumenda enim similique id eum, recusandae minus temporibus numquam suscipit at, maiores, blanditiis iste quas! Et earum, debitis sapiente eligendi vitae quas?</p>
+    <div class="about-exp">
+      <div class="about-exp-item">
+        <div class="about-exp-item-header">
+            <div>
+              <h5>Full stack web development</h5>
+              <p>codding studio (2024-now)</p>
+            </div>
+            <button class="btn" onclick="toggleDetail(event)">More Info</button>
+        </div>
+        <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum rem, incidunt voluptatibus saepe laborum non. Sit voluptates perferendis quam cupiditate dicta aperiam similique laboriosam enim.</p>
+      </div>
+      <div class="about-exp-item">
+        <div class="about-exp-item-header">
+            <div>
+              <h5>Full stack web development</h5>
+              <p>codding studio (2024-now)</p>
+            </div>
+            <button class="btn" onclick="toggleDetail(event)">More Info</button>
+        </div>
+        <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum rem, incidunt voluptatibus saepe laborum non. Sit voluptates perferendis quam cupiditate dicta aperiam similique laboriosam enim.</p>
+      </div>
+      <div class="about-exp-item">
+        <div class="about-exp-item-header">
+            <div>
+              <h5>Full stack web development</h5>
+              <p>codding studio (2024-now)</p>
+            </div>
+            <button class="btn" onclick="toggleDetail(event)">More Info</button>
+        </div>
+        <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum rem, incidunt voluptatibus saepe laborum non. Sit voluptates perferendis quam cupiditate dicta aperiam similique laboriosam enim.</p>
+      </div>
+    </div>
+  </section>
+  <section id=" -->
